Layout | Fixed Navigation Bar Button Overlapping

--- a/src/styles/sass/components/layout/ControlsMenu.module.scss
+++ b/src/styles/sass/components/layout/ControlsMenu.module.scss
@@ -105,5 +105,13 @@
 .buttonWrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
+}
+
+.leftButtonWrapper {
+  display: flex;
+  align-items: center;
+}
+
+.leftButtonWrapper > * {
+  margin: 0 5px;
 }
