--- a/src/styles/sass/components/ui/NavigationButton.module.scss
+++ b/src/styles/sass/components/ui/NavigationButton.module.scss
@@ -106,6 +106,10 @@
   padding: 0;
 }
 
+.col {
+  padding: 0;
+}
+
 .left, .right {
   margin-top: 6px;
 }
