--- a/src/styles/sass/components/ui/buttons/LearnButton.module.scss
+++ b/src/styles/sass/components/ui/buttons/LearnButton.module.scss
@@ -9,13 +9,5 @@
 }
 
 .kana {
-  color: $learn-colour;
-}
-
-.faq {
-  color: #efd530 !important;
-}
-
-.sm2 {
-  color: #ef9bae;
+  color: $learn-colour !important;
 }
