--- a/src/styles/sass/components/user/UserButton.module.scss
+++ b/src/styles/sass/components/user/UserButton.module.scss
@@ -9,7 +9,7 @@
 }
 
 .highscores {
-  color: #eed242;
+  color: #eed242 !important;
 }
 
 .logout {
